try gh pages fix, update font colors to look better on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,7 +13,11 @@ body {
   background-image: url("https://images.unsplash.com/photo-1602872250608-a17f7ba8933d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3334&q=80");
   background-size: cover;
   padding: 0 2rem 0 2rem;
-  color: var(--sec) !important;
+  color: var(--quat) !important;
+}
+
+h1 {
+  color: var(--sec);
 }
 
 main {
